# imabi

./: .gitignore  README.md  main.py  pyproject.toml
assets/: base_style.css
src/imabi/: content_fetcher.py  data_models.py  epub_generator.py  imabi_processor.py  image_processor.py  index_processor.py  lesson_processor.py  main_app.py  text_processor.py
